force-app/main/default/objects/B25__Dimension_Field__c/B25__Dimension_Field__c.object-meta.xml
<CustomObject>
    <description>Object holding information about lookup fields on Reservation, telling Booker25 which Reservations to plot on which Dimensions.</description>
    <label>Dimension Field</label>
    <nameField>
        <label>Dimension Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>