force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Autopopulate__c.field-meta.xml
<CustomField>
    <fullName>B25__Autopopulate__c</fullName>
    <description>When creating a new Reservation on this Dimension&apos;s Calendar, should this field be automatically populated?</description>
    <inlineHelpText>Lors de la création d’une nouvelle réservation sur le calendrier de cette dimension, ce champ doit-il être automatiquement rempli ?</inlineHelpText>
    <label>Auto Populate on Calendar</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEVER</fullName>
                <label>Never</label>
            </value>
            <value>
                <fullName>ON_FORM_AND_REQUIRED</fullName>
                <label>Only when on form and required</label>
            </value>
            <value>
                <fullName>ON_FORM</fullName>
                <label>Only when on form</label>
            </value>
            <value>
                <fullName>ALWAYS</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>