force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Dimension__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension__c</fullName>
    <description>The Dimension record to which this Dimension Field record belongs.</description>
    <inlineHelpText>L’enregistrement de la dimension auquel appartient ce champ de dimension.</inlineHelpText>
    <label>Dimension</label>
    <referenceTo>B25__Dimension__c</referenceTo>
    <relationshipLabel>Dimension Fields</relationshipLabel>
    <relationshipName>Dimension_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>