force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Dimension_Allow_Conflict_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension_Allow_Conflict_Field__c</fullName>
    <description>The API name of a (cross-object) checkbox field on the related object. When true, the related record
		will allow double bookings.</description>
    <inlineHelpText>Le nom API d’un champ de case à cocher (interobjets) pour l’objet connexe. Si cette option est true, l’enregistrement connexe autorise les réservations doubles.</inlineHelpText>
    <label>Dimension Allow Double Booking Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>