force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Dimension_Capacity_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Dimension_Capacity_Field__c</fullName>
    <description>The API name of a (cross-object) number field on the Dimension object that contains the capacity.</description>
    <inlineHelpText>Le nom API d’un champ numérique (interobjets) pour l’objet de dimension qui contient la capacité.</inlineHelpText>
    <label>Dimension Capacity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>