force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Enable_Advanced_Lookup_Filtering__c.field-meta.xml
<CustomField>
    <fullName>B25__Enable_Advanced_Lookup_Filtering__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this checkbox enables the advanced lookup on the Reservation form. This lookup allows users to filter only objects that this Reservation could be created in by clicking the filter button. Because of SalesForce limitations this custom lookup does not respect lookup filters defined on the field.</description>
    <inlineHelpText>En cochant cette case, vous activez la recherche avancée pour le formulaire de réservation. Cette recherche permet aux utilisateurs de filtrer uniquement les objets dans lesquels cette réservation pourrait être créée en cliquant sur le bouton de filtre. La recherche personnalisée ne respecte pas les filtres de recherche.</inlineHelpText>
    <label>Enable Advanced Lookup Filtering</label>
    <type>Checkbox</type>
</CustomField>