force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Relationship_Name__c</fullName>
    <description>System generated, don&apos;t modify.</description>
    <inlineHelpText>Généré par le système, ne pas modifier.</inlineHelpText>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>