force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Reservation_Allow_Conflict_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Allow_Conflict_Field__c</fullName>
    <description>The API name of a (cross-object) checkbox field on Reservation. When true, the Reservation will allow
		double bookings.</description>
    <inlineHelpText>Le nom API d’un champ de case à cocher (interobjets) pour la réservation. Si cette option est true, la réservation autorise les réservations doubles.</inlineHelpText>
    <label>Reservation Allow Double Booking Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>