force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Reservation_Quantity_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Quantity_Field__c</fullName>
    <description>The API name of a (cross-object) number field on Reservation that contains the Reservation quantity.</description>
    <inlineHelpText>Le nom API d’un champ numérique (interobjets) pour la réservation qui contient la quantité de la réservation.</inlineHelpText>
    <label>Reservation Quantity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>