force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Reservation_Skip_Capacity_Check_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Skip_Capacity_Check_Field__c</fullName>
    <description>Optional. If this (cross-object) field on reservation equals true, the quantity of this reservation
		will not count in
		the capacity check. The quantity still can&apos;t exceed the dimension&apos;s capacity, however.</description>
    <inlineHelpText>Facultatif. Si ce champ (interobjets) pour la réservation est true, la quantité de cette réservation ne comptera pas dans la vérification de capacité. Toutefois, la quantité ne peut toujours pas dépasser la capacité de la dimension.</inlineHelpText>
    <label>Reservation Skip Capacity Check Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>