force-app/main/default/objects/B25__Dimension_Field__c/fields/B25__Sync_Priority__c.field-meta.xml
<CustomField>
    <fullName>B25__Sync_Priority__c</fullName>
    <description>When multiple Dimension Fields are filled on a Reservation, the calendar of the record with the
		lowest Sync Priority will be used to create the event. The other related dimension records will
		be added as attendees.</description>
    <inlineHelpText>Lorsque plusieurs champs de dimension sont remplis pour une réservation, le calendrier de l’enregistrement ayant la plus faible priorité de synchronisation sera utilisé pour créer l’événement. Les autres enregistrements de dimension liés seront ajoutés en tant que participants.</inlineHelpText>
    <label>Sync Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>